# notion_photobook

./: .gitignore  LICENSE  README.md  post_install.py  pyproject.toml  setup.py
src/: __init__.py  cli.py  config.py  core.py  layout.py  parser.py  renderer.py
src/notion_photobook/: __init__.py  cli.py  core.py  layout.py  parser.py  renderer.py
src/notion_photobook.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_config.py  test_core.py
