[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-photobook"
version = "0.1.0"
description = "Convert Notion HTML exports into beautiful print-ready photobooks"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Notion Photobook Team", email = "contact@notion-photobook.dev"}
]
maintainers = [
    {name = "Notion Photobook Team", email = "contact@notion-photobook.dev"}
]
keywords = ["notion", "photobook", "pdf", "layout", "printing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.8"
dependencies = [
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "rectpack>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
photobookgen = "notion_photobook.cli:main"

[project.urls]
Homepage = "https://github.com/notion-photobook/notion-photobook"
Repository = "https://github.com/notion-photobook/notion-photobook"
Documentation = "https://github.com/notion-photobook/notion-photobook#readme"
Issues = "https://github.com/notion-photobook/notion-photobook/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=notion_photobook",
    "--cov-report=term-missing",
    "--cov-report=html",
] 